Ingress/Ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressrule-djangoapp
spec:
  ingressClassName: nginx
  rules:
  - host: testapi.georgeajayilabs.com.ng
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-rest-api
            port:
              number: 80
