Ingress/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressrule-djangoapp
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true" # Redirect HTTP to HTTPS
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - testapi.georgeajayilabs.com.ng
    secretName: testapi-tls # TLS secret containing the certificate and key
  rules:
  - host: testapi.georgeajayilabs.com.ng
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-rest-api
            port:
              number: 80
